Feature: updated link checks for customer update and delete, modified the customer delete endpoint
